fix: qrscan_bottom.webPx

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="logo.png" />
     <title>BeatBuddy</title>
     <style>
       :root {
@@ -38,7 +39,6 @@
         align-items: center;
         flex-wrap: wrap;
         gap: 16px 15%; /* 가로 간격 = 컨테이너 폭의 15% */
-        padding: 12px 0 20px;
       }
 
       /* 핵심: 링크 래퍼가 반응형 너비를 갖고 */
@@ -85,7 +85,7 @@
       </section>
 
       <img
-        src="qrscan_bottom.webp"
+        src="qrscan_bottom_fix.webp"
         alt="페이지 bottom이미지"
         loading="lazy"
         decoding="async"
