fix: image resolution

--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
   <body>
     <div class="image-wrap">
       <img
-        src="qrscan_top.webp"
+        src="output.png"
         alt="페이지 top이미지"
         loading="lazy"
         decoding="async"
       />
-
       <section class="cta" id="download" role="region" aria-label="앱 다운로드">
         <div class="badges">
           <a
